--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "files": [
     "index.js"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "safe-buffer": "^5.0.1"
+  },
   "devDependencies": {},
   "optionalDependencies": {},
   "engines": {
